--- a/flash-overrides.css
+++ b/flash-overrides.css
@@ -1971,33 +1971,11 @@ h1.text-4xl.font-bold.tracking-tight.text-center.sm\:text-3xl.mb-10.rounded-xl.b
 
 
 
-/* Hide the breadcrumb nav completely */
+/* Hide the breadcrumb nav completely 
 nav[aria-label="Breadcrumb"] {
     display: none !important;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+*/
 /* REMOVE CATEGORIES FROM BROWSE ON HOME SCREEN */
 .mx-auto.max-w-7xl.px-2.lg\:px-8.relative {
     display: none !important;
@@ -3329,91 +3307,6 @@ svg.size-6.md\:size-7.flex-shrink-0 {
     50% { background-position: 200% 0; }
     100% { background-position: -200% 0; }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -5345,7 +5238,7 @@ html body
 }
 
 /* =========================================================
-   FLASH — MOBILE SIDEBAR NAV (ADDITIVE)
+   MOBILE SIDEBAR NAV - Fixed. 12/02/26
    ========================================================= */
 
 .fcNavX{
@@ -5408,42 +5301,3 @@ html body
     transform: none !important;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
